--- a/project-view.html
+++ b/project-view.html
@@ -21,6 +21,7 @@
     <!--<link href="css/sticky-footer-navbar.css" rel="stylesheet">-->
     <link href="css/main.css" rel="stylesheet">
     <link href="css/index.css" rel="stylesheet">
+    <link href="css/rener.css" rel="stylesheet">
 
     <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
     <!--[if lt IE 9]><script src="js/assets/ie8-responsive-file-warning.js"></script><![endif]-->
@@ -42,8 +43,7 @@
             <div class="mtmb15">
                 <h4>青春就是用来折腾抑郁忧伤低潮，但谁不爱青春？《卡在咽喉的时光》寻求出版支持！</h4>
                 <p>
-                    <span class="badge">发起人</span> <a href="admin/user-index-info.html" target="_blank" class="fz16">rener</a> &nbsp; &nbsp;
-                    <span class="glyphicon glyphicon-map-marker color-grey"></span> <span class="color-grey">四川 成都 锦江区 成都七中嘉祥外国语学校</span>
+                    2014/09/15-2014/11/24  &nbsp;  <span class="label label-warning">火热筹款中</span>
                 </p>
             </div>
             <div class="row">
@@ -122,7 +122,23 @@
 
 
                         </div>
-                        <div class="tab-pane" id="profile">更新</div>
+                        <div class="tab-pane" id="profile">
+
+                            <div class="blog-post">
+                                <h2 class="blog-post-title">Sample blog post</h2>
+                                <p class="blog-post-meta">January 1, 2014 by <a href="#">Mark</a></p>
+
+                                <p>This blog post shows a few different types of content that's supported and styled with Bootstrap. Basic typography, images, and code are all supported.</p>
+                                <hr>
+                                <p>Cum sociis natoque penatibus et magnis <a href="#">dis parturient montes</a>, nascetur ridiculus mus. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Sed posuere consectetur est at lobortis. Cras mattis consectetur purus sit amet fermentum.</p>
+                                <blockquote>
+                                    <p>Curabitur blandit tempus porttitor. <strong>Nullam quis risus eget urna mollis</strong> ornare vel eu leo. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+                                </blockquote>
+                                <p>Etiam porta <em>sem malesuada magna</em> mollis euismod. Cras mattis consectetur purus sit amet fermentum. Aenean lacinia bibendum nulla sed consectetur.</p>
+                                 
+                            </div>
+
+                        </div>
                         <div class="tab-pane" id="messages">支持者</div>
                         <div class="tab-pane" id="settings">话题</div>
                     </div>
@@ -132,11 +148,8 @@
 
                 <div class="col-lg-4">
                     <div class="mtmb15 pt10"></div>
-                    <!--<div class="well">
-                        <h4>About</h4>
-                        <p>Etiam porta <em>sem malesuada magna</em> mollis euismod. Cras mattis consectetur purus sit amet fermentum. Aenean lacinia bibendum nulla sed consectetur.</p>
-                    </div>-->
-                    <div class="panel panel-default">
+
+                    <!--<div class="panel panel-default">
                         <div class="panel-body">
                             <h5>目前累计金额</h5>
                             <h1><span class="fz10">¥</span>19,305</h1>
@@ -151,15 +164,69 @@
                             </div>
                             <hr />
                             <div class="item-rate clearfix small">
-                                <span class="rate1">
-                                    <em>10%</em><br>已达
-                                </span>
-                                <span class="rate2">
-                                    <em>￥1,247</em><br>已筹资
-                                </span>
-                                <span class="rate3">
-                                    <em>10天</em><br>剩余时间
-                                </span>
+                                <ul class="article-options clearfix">
+                                    <li>
+                                        <div class="article-option">
+                                            <b class="fz16">46</b>
+                                            <span>天剩余</span>
+                                        </div>
+                                    </li>
+                                    <li>
+                                        <div class="article-option">
+                                            <b class="fz16">4</b>
+                                            <span>话题</span>
+                                        </div>
+                                    </li>
+                                    <li>
+                                        <div class="article-option">
+                                            <b class="fz16">276</b>
+                                            <span>浏览</span>
+                                        </div>
+                                    </li>
+                                </ul>
+                            </div>
+
+
+                        </div>
+
+
+                    </div>-->
+
+                    <div class="panel panel-default">
+                        <div class="panel-body">
+                            <h5>目前累计金额 <span class="label label-warning pull-right">众筹中</span> <!--<span class="label label-success pull-right">众筹成功</span>--> </h5>
+                            <h1 class="clearfix"><span class="fz10">¥</span>19,305</h1>
+                            <p class="mb0 pt10">此项目必须在 <label class="label label-success">2014年11月24日</label> 前得到 <label class="label label-success">￥10000</label> 的支持才可成功！</p>
+                        </div>
+                        <div class="project-view-status">
+                            <hr />
+                            <div class="progress rener-progress">
+                                <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="min-width: 20px; width:60%;">
+                                    60% <span class="sr-only">60% 完成</span>
+                                </div>
+                            </div>
+                            <hr />
+                            <div class="item-rate clearfix small">
+                                <ul class="article-options clearfix">
+                                    <li>
+                                        <div class="article-option">
+                                            <b class="fz16">46</b>
+                                            <span>天剩余</span>
+                                        </div>
+                                    </li>
+                                    <li>
+                                        <div class="article-option">
+                                            <b class="fz16">4</b>
+                                            <span>话题</span>
+                                        </div>
+                                    </li>
+                                    <li>
+                                        <div class="article-option">
+                                            <b class="fz16">276</b>
+                                            <span>支持</span>
+                                        </div>
+                                    </li>
+                                </ul>
                             </div>
 
 
@@ -168,29 +235,110 @@
 
                     </div>
 
-                    <div class="thumbnail">
-                        <a href="#"><img alt="项目简介内容，长度200字以内" title="项目简介内容，长度200字以内" src="img/project/6.jpg"></a>
-                        <div class="caption">
-                            <h5><a href="#" title="BelayCords - Reversible USB Charging Cords iPhone & Android">BelayCords - Reversible USB Charging Cords iPhone…</a> </h5>
-                            <label class="small"> 项目经理： <strong><a href="#">Made In College</a></strong></label>
+                    <!--项目发起人-->
+                    <div class="panel panel-default">
+                        <div class="panel-heading">
+                            项目发起人
                         </div>
-                        <div class="progress">
-                            <div class="progress-bar" role="progressbar" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100" style="width: 10%;">
-                                <span class="sr-only">10% 完成</span>
+                        <div class="panel-body">
+                            <div class="media">
+                                <a class="pull-left" href="admin/user-index.html">
+                                    <img class="media-object" src="../img/default_avatar.gif" alt="..." width="52" height="52">
+                                </a>
+                                <div class="media-body">
+                                    <h4 class="media-heading"><a href="admin/user-index.html">天一各飞</a> <span class="fz12 color-grey"><span class="glyphicon glyphicon-map-marker"></span>  四川 成都</span>  </h4>
+                                    <p class="fz12">伊欧乐科技正式成立于2013年， 伊欧乐取自YOLO的谐音…</p>
+                                    <p class="fz12"> 发起：5  &nbsp;&nbsp;  支持：20 &nbsp;&nbsp;  关注：4 </p>
+                                </div>
                             </div>
                         </div>
-                        <div class="item-rate clearfix small">
-                            <span class="rate1">
-                                <em>10%</em><br>已达
-                            </span>
-                            <span class="rate2">
-                                <em>￥1,247</em><br>已筹资
-                            </span>
-                            <span class="rate3">
-                                <em>10天</em><br>剩余时间
-                            </span>
-                        </div>
+                    </div>
 
+                    <div class="panel panel-default">
+                        <div class="panel-heading">
+                            <span class="pull-left fz16">支持 ￥35</span>
+                            <span class="pull-right fz12 pt3">已有 <label class="badge">266</label> 位支持者 </span>
+                            <div class="clearfix"></div>
+                        </div>
+                        <div class="panel-body">
+                            <dl>
+                                <dd>
+                                    无限额
+                                    <br />
+                                    <br />
+                                </dd>
+                                <dd>
+                                    <ol>
+                                        <li>《卡在咽喉的时光》图书一本。如需签名或赠言，请在讨论区留言。</li>
+                                        <li>附赠《藏爱：香巴拉的私享盛宴》一本。如需签名或赠言，请在讨论区留言。</li>
+                                        <li>随机抽取空白明信片一张，随书附送。</li>
+                                        <li>快递包邮。</li>
+
+                                    </ol>
+                                </dd>
+
+                                <dd class="fz12"><b>配送费用:</b> 免运费</dd>
+                                <dd class="fz12"><b>预计回报发送时间:</b> 项目成功结束后30天内</dd>
+
+                            </dl>
+                        </div>
+                        <div class="panel-footer">
+                            <button class="btn btn-danger">支持￥35元</button>
+                        </div>
+                    </div>
+
+                    <div class="panel panel-default">
+                        <div class="panel-heading">
+                            <span class="pull-left fz16">支持 ￥100</span>
+                            <span class="pull-right fz12 pt3">已有 <label class="badge">10</label> 位支持者 </span>
+                            <div class="clearfix"></div>
+                        </div>
+                        <div class="panel-body">
+                            <dl class="fz12">
+                                <dd>
+
+                                    限额 <label>10</label>位 | 剩余 <label>0</label>位
+                                    <br />
+                                    <br />
+                                </dd>
+                                <dd>
+                                    <ol>
+                                        <li>《卡在咽喉的时光》图书一本。如需签名或赠言，请在讨论区留言。</li>
+                                        <li>附赠《藏爱：香巴拉的私享盛宴》一本。如需签名或赠言，请在讨论区留言。</li>
+                                        <li>随机抽取空白明信片一张，随书附送。</li>
+                                        <li>快递包邮。</li>
+
+                                    </ol>
+                                </dd>
+
+                                <dd><b>配送费用:</b> 免运费</dd>
+                                <dd><b>预计回报发送时间:</b> 项目成功结束后30天内</dd>
+
+                            </dl>
+                        </div>
+                        <div class="panel-footer">
+
+                            <button class="btn btn-danger" disabled="disabled">限额已满</button>
+                        </div>
+                    </div>
+
+                    <div class="alert alert-info" role="alert">
+                        <h4>关于支持与退款</h4>
+                        <hr class="mp0" />
+                        <p class="fz12 pt10">
+                            这个项目必须在2014年10月15日之前达到￥10000的目标才算成功，否则已经支持的订单将取消。<br />
+                            订单取消时，如果您使用的是网银钱包余额或储蓄卡付款，您的支持金额将全额退还至您的网银钱包；如果您使用的是信用卡付款，您的支持金额将全额退还至支付所用的信用卡。
+                        </p>
+                    </div>
+                    <div class="alert alert-warning" role="alert">
+                        <h4>风险提示</h4>
+                        <hr class="mp0" />
+                        <p class="fz12 pt10">
+                            1. 请在下单后15分钟内付款哦，否则您的订单会被自动关闭。您可将订金和尾款一次性付款到支付宝，不需要后面再来付尾款了哦。
+                        </p>
+                        <p class="fz12">
+                            2. 项目是存在风险的，如果项目没有按照预期的目标执行，项目发起人可能无法正常发放回报。如果产生了这种情况，您的支付宝中的尾款会退还给您，但是由于订金已经被项目组织者使用，您需要和项目组织者协商订金退还的事宜，淘宝网没有帮您追讨订金的义务哦。
+                        </p>
                     </div>
                 </div>
             </div>
