--- a/admin/user_signin.html
+++ b/admin/user_signin.html
@@ -89,7 +89,7 @@
                                     </div>
                                 </div>
                             </form>
-                            <form role="form" id="register-form" style="display:none;">
+                            <form role="form" id="register-form" style="display:none;" action="email-verify.html">
                                 <div class="row">
                                     <div class="form-group col-lg-12">
                                         <span>用户注册</span>
@@ -105,7 +105,7 @@
                                     </div>
                                     <div class="form-group col-lg-12">
                                         <div class=" col-sm-5 paddleft0">
-                                            <button type="button" class="btn btn-success btn-block" id="register">立即注册</button>
+                                            <button type="submit" class="btn btn-success btn-block" id="register">立即注册</button>
                                         </div>
                                         <div class=" col-sm-7 martop5 text-right">
                                             <a id="once-login" class="small" href="javascript:;">已有账号，立即登录</a>
