--- a/admin/user_signin.html
+++ b/admin/user_signin.html
@@ -111,7 +111,12 @@
                                             <a id="once-login" class="small" href="javascript:;">已有账号，立即登录</a>
                                         </div>
                                     </div>
-
+                                    
+                                </div>
+                                <div class="mb0">
+                                    <div class="alert alert-danger alert-dismissible" role="alert">
+                                        <strong>Warning!</strong> Better check yourself, you're not looking too good.
+                                    </div>
                                 </div>
                             </form>
                             <form role="form" id="forgot-pwd-form" style="display:none;">
@@ -135,6 +140,7 @@
                                 </div>
                             </form>
                         </div>
+                         
                     </div>
                 </div>
             </div>
