--- a/project-view.html
+++ b/project-view.html
@@ -39,9 +39,10 @@
         <!--<h2 class="bs-docs-featurette-title text-center">为所有学生提供一个孵化梦想的平台。</h2>
         <p class="lead text-center"> 全部  筹资金  筹实物  找伙伴 搞活动   最新  最热</p>-->
         <!--<hr class="half-rule">-->
+        <div class="clearfix mtmb15"></div>
         <div class="clearfix mtmb15">
             <div class="mtmb15">
-                <h4>青春就是用来折腾抑郁忧伤低潮，但谁不爱青春？《卡在咽喉的时光》寻求出版支持！</h4>
+                <h3>青春就是用来折腾抑郁忧伤低潮，但谁不爱青春？《卡在咽喉的时光》寻求出版支持！</h3>
                 <p>
                     2014/09/15-2014/11/24  &nbsp;  <span class="label label-warning">火热筹款中</span>
                 </p>
@@ -123,21 +124,50 @@
 
                         </div>
                         <div class="tab-pane" id="profile">
-
-                            <div class="blog-post">
-                                <h2 class="blog-post-title">Sample blog post</h2>
-                                <p class="blog-post-meta">January 1, 2014 by <a href="#">Mark</a></p>
-
-                                <p>This blog post shows a few different types of content that's supported and styled with Bootstrap. Basic typography, images, and code are all supported.</p>
-                                <hr>
-                                <p>Cum sociis natoque penatibus et magnis <a href="#">dis parturient montes</a>, nascetur ridiculus mus. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Sed posuere consectetur est at lobortis. Cras mattis consectetur purus sit amet fermentum.</p>
-                                <blockquote>
-                                    <p>Curabitur blandit tempus porttitor. <strong>Nullam quis risus eget urna mollis</strong> ornare vel eu leo. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-                                </blockquote>
-                                <p>Etiam porta <em>sem malesuada magna</em> mollis euismod. Cras mattis consectetur purus sit amet fermentum. Aenean lacinia bibendum nulla sed consectetur.</p>
-                                 
+                            <div class="text-center mtmb15">
+                                <span class="label label-warning fz12 ptb5">这里记录了项目发起人更新的项目进展，您可以发起话题活评论与发起人进行交流。</span>
                             </div>
+                            <!--发起人-->
+                            <div class="autor mp0">
 
+                                <!--<div class="media">
+                                    <a class="pull-left" href="admin/user-index.html">
+                                        <img class="media-object img-circle" width="40" src="img/default_avatar.gif" alt="发起者姓名" title="发起者姓名">
+                                    </a>
+                                    <div class="media-body">
+                                        <h4 class="media-heading pt3"></h4>
+                                        <p class="media-body"> 发起人：<span class="label"><a href="admin/user-index.html">天一各飞</a></span></p>
+                                    </div>
+                                </div>-->
+                                <div class="row">
+                                    <div class="col-lg-2">
+                                        <a class="pull-right" href="admin/user-index.html">
+                                            <img class="media-object img-circle" width="50" src="img/default_avatar.gif" alt="发起者姓名" title="发起者姓名">
+                                        </a>
+                                    </div>
+                                    <div class="col-lg-9 pt10">
+                                        <p> 发起人：<span class="label"><a href="admin/user-index.html">天一各飞</a></span></p>
+                                    </div>
+                                    
+                                </div>
+                            </div>
+                            <!--时间轴-->
+                            <div class="clearfix timeline mp0">
+                                <div class="row fz12">
+                                    <div class="col-lg-1" style="min-width:70px;">
+                                       <h3 class="mp0">10</h3> 
+                                        2014/10
+                                    </div>
+                                    <div class="col-lg-10" style="border-left: 1px solid #dfdfdf;">
+                                        <p>
+                                            我们的iOS App已于2014年9月19在苹果商店上架了，大家可以下载体验哦，下载地址：https://itunes.apple.com/cn/app/x-light/id914338648?mt=8
+                                        </p>
+                                        <p>
+                                            <img class="img-rounded" src="img/project/10.jpg" width="180" title="" alt="">
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                         <div class="tab-pane" id="messages">支持者</div>
                         <div class="tab-pane" id="settings">话题</div>
@@ -148,49 +178,6 @@
 
                 <div class="col-lg-4">
                     <div class="mtmb15 pt10"></div>
-
-                    <!--<div class="panel panel-default">
-                        <div class="panel-body">
-                            <h5>目前累计金额</h5>
-                            <h1><span class="fz10">¥</span>19,305</h1>
-                            <p class="mb0 pt10">此项目必须在 <label class="label label-success">2014年11月24日</label> 前得到 <label class="label label-success">￥10000</label> 的支持才可成功！</p>
-                        </div>
-                        <div class="project-view-status">
-                            <hr />
-                            <div class="progress">
-                                <div class="progress-bar" role="progressbar" aria-valuenow="2" aria-valuemin="0" aria-valuemax="100" style="min-width: 20px; width:2%;">
-                                    2% <span class="sr-only">2% 完成</span>
-                                </div>
-                            </div>
-                            <hr />
-                            <div class="item-rate clearfix small">
-                                <ul class="article-options clearfix">
-                                    <li>
-                                        <div class="article-option">
-                                            <b class="fz16">46</b>
-                                            <span>天剩余</span>
-                                        </div>
-                                    </li>
-                                    <li>
-                                        <div class="article-option">
-                                            <b class="fz16">4</b>
-                                            <span>话题</span>
-                                        </div>
-                                    </li>
-                                    <li>
-                                        <div class="article-option">
-                                            <b class="fz16">276</b>
-                                            <span>浏览</span>
-                                        </div>
-                                    </li>
-                                </ul>
-                            </div>
-
-
-                        </div>
-
-
-                    </div>-->
 
                     <div class="panel panel-default">
                         <div class="panel-body">
@@ -243,7 +230,7 @@
                         <div class="panel-body">
                             <div class="media">
                                 <a class="pull-left" href="admin/user-index.html">
-                                    <img class="media-object" src="../img/default_avatar.gif" alt="..." width="52" height="52">
+                                    <img class="media-object" src="img/default_avatar.gif" alt="..." width="52" height="52">
                                 </a>
                                 <div class="media-body">
                                     <h4 class="media-heading"><a href="admin/user-index.html">天一各飞</a> <span class="fz12 color-grey"><span class="glyphicon glyphicon-map-marker"></span>  四川 成都</span>  </h4>
