--- a/index.html
+++ b/index.html
@@ -170,10 +170,10 @@
         <div class="row">
             <div class="col-sm-6 col-md-3">
                 <div class="thumbnail">
-                    <a href="#"><img alt="项目简介内容，长度200字以内" title="项目简介内容，长度200字以内" src="img/project/5.jpg"></a>
+                    <a href="project-view.html"><img alt="项目简介内容，长度200字以内" title="项目简介内容，长度200字以内" src="img/project/5.jpg"></a>
                     <div class="caption">
-                        <h5><a href="#" title="有梦想，就有新世界——扶持创业人计划">有梦想，就有新世界——扶持创业人计划</a> </h5>
-                        <label class="small"> 项目经理： <strong><a href="#">王二者一</a></strong></label>
+                        <h5><a href="project-view.html" title="有梦想，就有新世界——扶持创业人计划">有梦想，就有新世界——扶持创业人计划</a> </h5>
+                        <label class="small"> 项目经理： <strong><a href="project-view.html">王二者一</a></strong></label>
                     </div>
                     <div class="progress">
                         <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;">
