--- a/admin/start-project-1.html
+++ b/admin/start-project-1.html
@@ -134,18 +134,6 @@
                                                     </div>
                                                 </div>
                                                 <div class="form-group">
-                                                    <label for="project-url" class="col-sm-2 control-label">项目视频</label>
-                                                    <div class="col-sm-10">
-                                                        <input type="text" class="form-control" id="project-url" placeholder="请输入优酷视频的播放地址">
-                                                    </div>
-                                                </div>
-                                                <div class="form-group">
-                                                    <label for="project-url" class="col-sm-2 control-label">项目预算</label>
-                                                    <div class="col-sm-10">
-                                                        <input type="text" class="form-control" id="project-url" placeholder="请输入优酷视频的播放地址">
-                                                    </div>
-                                                </div>
-                                                <div class="form-group">
                                                     <label for="project-time" class="col-sm-2 control-label">项目起止时间</label>
                                                     <div class="col-sm-5">
                                                         <div class="input-group date datetimepicker5 pull-left">
@@ -170,12 +158,12 @@
                                                         <textarea rows="5" class="form-control" id="project-introduction" placeholder="填写项目简介…"></textarea>
                                                     </div>
                                                 </div>
-                                                <div class="form-group">
+                                                <!--<div class="form-group">
                                                     <label for="project-introduction" class="col-sm-2 control-label">详情描述</label>
                                                     <div class="col-sm-10">
                                                         <textarea rows="5" class="form-control" id="project-introduction" placeholder="填写项目简介（文本编辑框）…"></textarea>
                                                     </div>
-                                                </div>
+                                                </div>-->
                                                 <div class="form-group">
                                                     <div class="col-sm-offset-4 col-sm-12">
                                                         <button type="submit" class="btn btn-primary pull-right">下一步</button>
