--- a/list.html
+++ b/list.html
@@ -38,7 +38,7 @@
         <!--<h2 class="bs-docs-featurette-title text-center">为所有学生提供一个孵化梦想的平台。</h2>
         <p class="lead text-center"> 全部  筹资金  筹实物  找伙伴 搞活动   最新  最热</p>-->
         <!--<hr class="half-rule">-->
-        <div class="clearfix mtmb15">
+        <div class="row clearfix mtb15">
             <div class="well well-sm">
                 <ul class="nav nav-pills small" role="tablist">
                     <li role="presentation" class="active"><a href="#">全部</a></li>
@@ -85,7 +85,7 @@
                 </div>
 
             </div>
-            <div class="clearfix mtmb15"> </div>
+            <div class="clearfix mtb15"> </div>
 
             <div class="row">
                 <div class="col-sm-6 col-md-3">
@@ -461,7 +461,7 @@
                 </div>
 
             </div>
-            <div class="row mtmb15">
+            <div class="row mtb15">
                 <div class="col-md-4"></div>
                 <div class="col-md-4"><button type="button" class="btn btn-success btn-lg btn-block">加载更多…</button></div>
                 <div class="col-md-4"></div>
@@ -470,7 +470,7 @@
         </div>
 
     </div>
-    <div class="clearfix mtmb15"></div>
+    <div class="clearfix mtb15"></div>
 
     <div id="footer"></div>
 
