--- a/project-funding.html
+++ b/project-funding.html
@@ -57,12 +57,13 @@
                     </div>
                 </div>
             </div>
+            <div class="clearfix mt5mb15"></div>
             <div class="row">
                 <div class="panel panel-default">
                     <div class="panel-heading">
                         <h4>青春就是用来折腾抑郁忧伤低潮，但谁不爱青春？《卡在咽喉的时光》寻求出版支持！</h4>
                     </div>
-                    <div class="panel-body">
+                    <div class="panel-body ren-funding">
                         <dl class="dl-horizontal">
                             <dt>支持金额：</dt>
                             <dd class="has-error">￥<label class="control-label">1,230.00</label>元</dd>
@@ -71,10 +72,32 @@
                             <dt>回报内容：</dt>
                             <dd class="fz12">为感谢您对智歌的关注，恭喜您获得了抽奖机会，将有5位免费获得智歌智能互联车载终端一台</dd>
                             <dt>发票：</dt>
-                            <dd> </dd>
+                            <dd>
+                                <!--<div class="btn-group btn-group-xs">
+                                    <button type="button" class="btn btn-success active">无需发票</button>
+                                    <button type="button" class="btn btn-default">需要发票</button>
+                                </div>-->
+                                <div class="btn-group btn-group-xs" id="ren-needfunding" data-toggle="buttons">
+                                    <label class="btn btn-default active">
+                                        <input type="radio" name="options" id="noneedfunding" autocomplete="off" checked> 无需发票
+                                    </label>
+                                    <label class="btn btn-default">
+                                        <input type="radio" name="options" id="needfunding" autocomplete="off"> 需要发票
+                                    </label>
+
+                                </div>
+                                <div class="clearfix mtmb15 ren-fill-funding-box">
+                                    <div class="form-group">
+                                        <div class="col-sm-4 mp0">
+                                            <input type="text" maxlength="200" class="form-control input-sm fz12" id="inputEmail3" placeholder="" value="个人">
+                                        </div>
+                                        <label for="inputEmail3" class="col-sm-2 fz12 control-label">* 发票抬头：</label>
+                                    </div>
+                                </div>
+                            </dd>
                             <dt>备注：</dt>
                             <dd>
-                                <input type="text" class="form-control" placeholder="您可以填写关于回报或您希望发起人知道的信息，鼓励一下也好~~">
+                                <input type="text" class="form-control fz12" placeholder="您可以填写关于回报或您希望发起人知道的信息，鼓励一下也好~~">
                             </dd>
                         </dl>
                         <div class="clearfix dot"></div>
@@ -86,6 +109,13 @@
                                         <span> 李琉璃 13980053200 <label class="control-label">(手机号码用于接收回报信息，请确认无误！)</label></span><br>
                                         四川成都市武侯区三环以内xxx街xx号xxx2栋2单元4号  <a href="#"> 修改</a>
                                     </address>
+                                </dd>
+                                <dd class="fz12">
+                                    <p class="">
+                                        <input name="addrList" id="addrList_22700855" type="radio" selected="" value="22700855" >&nbsp;<label class="fz12" for="addrList_22700855">吴三桂&nbsp;&nbsp;xxxx街xxx号xxxx2栋2单元4号&nbsp;13980650000</label>&nbsp;&nbsp;&nbsp;<a class="f_blue" href="javascript:editaddr('22700855','吴三桂','xxxxx号xxx2栋2单元4号','','1398065000','',22,1930,50947,3891);">编辑</a>&nbsp;&nbsp;&nbsp;<a class="f_blue write_del" href="javascript:removeaddr('22700855');">删除</a>
+                                    </p>
+
+
                                 </dd>
                             </dl>
                         </div>
@@ -130,11 +160,7 @@
             //公共部分加载
             $("#head").load("head.html");
             $("#footer").load("footer.html");
-            //$.scrollUp({
-            //    animation: 'fade',
-            //    activeOverlay: '#00FFFF'
-            //});
-            //$.scrollUp();
+
             $.scrollUp({
                 scrollName: "scrollUp",
                 topDistance: "300",
@@ -145,14 +171,24 @@
                 scrollText: '<i class="glyphicon glyphicon-chevron-up"></i>',
                 activeOverlay: !1
             })
+            $('.ren-fill-funding-box').hide();
+            //选择发票时出现
+            $('#ren-needfunding').change(function () {
+                var isneedfunding = $('#ren-needfunding #needfunding').is(':checked')
+                //var checkedDays = $("#ren-needfunding :checkbox").map(function () {
+                //    return +$(this).is(':checked');
+                //}).get();
+                if (isneedfunding) {
+                    $('.ren-fill-funding-box').show();
+                }
+                else
+                    $('.ren-fill-funding-box').hide();
+                console.log(isneedfunding);
+            })
+
+
         })
-        //$.get("head.html", function (data) {
-        //    $("#head").html(data);
-        //    //$("#footer").load("footer.html");
-        //});
-        //$.get("footer.html", function (data) {
-        //    $("#footer").html(data);
-        //});
+
     </script>
 
 
