--- a/admin/head.html
+++ b/admin/head.html
@@ -13,10 +13,10 @@
                 <li class="active"><a href="home.html">首页</a></li>
                 <li><a href="#about">浏览项目</a></li>
                 <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">发起项目 <span class="caret"></span></a>
+                    <a href="start-project-description.html " class=" dropdown-toggle" data-toggle="dropdown">发起项目 <span class="caret"></span></a>
                     <ul class="dropdown-menu" role="menu">
-                        <li><a href="#">筹资金</a></li>
-                        <li><a href="#">筹实物</a></li>
+                        <li><a href="start-project-description.html">筹资金</a></li>
+                        <li><a href="start-project-description.html" ">筹实物</a></li>
                         <li><a href="#">发现小伙伴</a></li>
 
                     </ul>
