--- a/admin/start-project-1.html
+++ b/admin/start-project-1.html
@@ -43,11 +43,22 @@
         <div class="clearfix mtmb15"></div>
         <div class="container">
             <div class="row">
-                <div class="panel panel-primary">
-                    <div class="panel-heading">
-                        <h4>项目基本信息</h4>
-                       
+                <div class="btn-group btn-group-justified marbottom15">
+                    <div class="btn-group">
+                        <button type="button" class="btn btn-primary active disabled">发起项目声明</button>
                     </div>
+                    <div class="btn-group">
+                        <button type="button" class="btn btn-primary active">基本信息</button>
+                    </div>
+                    <div class="btn-group">
+                        <button type="button" class="btn btn-default">项目详述</button>
+                    </div>
+                    <div class="btn-group">
+                        <button type="button" class="btn btn-default">项目回馈</button>
+                    </div>
+                </div>
+                <div class="panel panel-default">
+                   
                     <div class="panel-body text-center">
                         <div class="panel panel-default">
                             <div class="panel-body" style="padding:15px 30px 30px 15px">
@@ -191,10 +202,10 @@
                 </div>
             </div>
         </div>
+        <div id="footer"></div>
     </div>
 
-    <div class="clearfix mtmb15"></div>
-    <div class="footer"></div>
+   
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
@@ -228,7 +239,7 @@
             });
             //日历时间结束
             $("#head").load("head.html");
-            $(".footer").load("footer.html");
+            $("#footer").load("footer.html");
             $(".school-name").focus();
             $(".school-name").keyup(function () {
                 var schoolname = $(".school-name").val();
