--- a/admin/start-project-2.html
+++ b/admin/start-project-2.html
@@ -43,10 +43,22 @@
         <div class="clearfix mtmb15"></div>
         <div class="container">
             <div class="row">
-                <div class="panel panel-primary">
-                    <div class="panel-heading">
-                        <h4>项目详述</h4>
+                <div class="btn-group btn-group-justified marbottom15">
+                    <div class="btn-group">
+                        <button type="button" class="btn btn-primary active disabled">发起项目声明</button>
                     </div>
+                    <div class="btn-group">
+                        <button type="button" class="btn btn-primary active disabled">基本信息</button>
+                    </div>
+                    <div class="btn-group">
+                        <button type="button" class="btn btn-primary active">项目详述</button>
+                    </div>
+                    <div class="btn-group">
+                        <button type="button" class="btn btn-default">项目回馈</button>
+                    </div>
+                </div>
+                <div class="panel panel-primary">
+                   
                     <div class="panel-body text-center">
                         <div class="col-lg-10">
                             <div class="text-left">
@@ -320,6 +332,7 @@
                 </div>
             </div>
         </div>
+        <div id="footer"></div>
     </div>
 
     <!--<div class="footer"></div>-->
@@ -339,7 +352,7 @@
     <script type="text/javascript">
         $(function () {
             $("#head").load("head.html");
-            $(".footer").load("footer.html");
+            $("#footer").load("footer.html");
             $(".dropdown-menu li a").bind("click", function () {
                 var $this = $(this);
                 var $a = $this.parent().parent().prev()
